2008-02-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-preview.c: take the reading direction into
	account and do the right thing for RTL languages.

2008-02-26  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scripts/frosty-logo.scm: Commited slightly
	modified patch from LightningIsMyName. Fixes bug #472316. The
	appearance of the sparkle layer could be better.

2008-02-26  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-transform.[ch]
	(gimp_display_shell_transform_points)
	* app/tools/gimpdrawtool.[ch] (gimp_draw_tool_draw_lines): take
	arrays of GimpVector2 instead of arrays of gdouble to represent
	the input points.

	* app/display/gimpdisplayshell-draw.c
	* app/tools/gimppolygonselecttool.c
	* app/tools/gimpfreeselecttool.c: don't cast the GimpVector2 arrays
	to double arrays when passing them to above functions.

	* app/tools/gimpiscissorstool.c: create a temporary GimpVector2
	array instead of a temporary gdouble array.

2008-02-26  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimppolygonselecttool.c: rename member num_points to
	n_points and various small cleanups all over the place.

2008-02-26  Sven Neumann  <sven@gimp.org>

	* configure.in: use AM_PROG_CC_C_O to fix warning with automake 1.10.
	Removed obsolete call to AM_PROG_CC_STDC.

2008-02-26  Sven Neumann  <sven@gimp.org>

	* app/version.c (gimp_show_library_version): made the library
	version information easier to translate.

2008-02-26  Tor Lillqvist  <tml@novell.com>

	* app/version.c (gimp_show_library_versions): Show also GEGL
	version.

2008-02-26  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-preview.c: create a Cairo image surface
	from the data returned from gimp_drawable_get_thumbnail() instead
	of using an intermediate GdkPixbuf. This code should eventually
	end up in libgimpui.

2008-02-26  Sven Neumann  <sven@gimp.org>

	* docs/gimp.1.in: document the "--version --verbose" option.

2008-02-26  Tor Lillqvist  <tml@novell.com>
